--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color: black;"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculadora</title>
 </head>
-<body>
-    <h1>¡Hola Mundo!</h1>
-    mi primera pagina
+<body style="color: white;text-align: center; " >
+    <h1>Calculadora</h1>
+    <p>Calculadora multifuncional</p>
+    <div style="
+    border: 5px dotted white;
+">
+        <div style=" border: 2px solid white;">a</div>
+        <div style=" border: 2px solid green;">c</div>
+        <div style=" border: 2px solid red;">d</div>
+    </div>
 </body>
 </html>
